--- a/Ex/index.html
+++ b/Ex/index.html
@@ -76,6 +76,122 @@ table.storm-table td {
 table.storm-table tr{
 	background-color:#070707;
 }
+
+#sidebar h3 {
+	background-color: #070707;
+	padding-top: 4px;
+	padding-right: 20px;
+	padding-bottom: 4px;
+	padding-left: 10px;
+	font-size: 15px;
+	margin-top: 0px;
+	margin-right: -20px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	background-color: #070707;
+	-webkit-border-top-left-radius: 5px;
+	-moz-border-radius-topleft:5px;
+	border-top-left-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	-moz-border-radius-bottomleft: 5px;
+	border-bottom-left-radius: 5px;
+	-webkit-box-shadow: 0px 1px 0px #1d1d1d;
+	-moz-box-shadow: 0px 1px 0px #1d1d1d;
+	box-shadow: 0px 1px 0px #1d1d1d;
+	border-top-width: 1px;
+	border-bottom-width: 1px;
+	border-left-width: 1px;
+	border-top-style: solid;
+	border-right-style: none;
+	border-bottom-style: solid;
+	border-left-style: solid;
+	border-top-color: #030303;
+	border-bottom-color: #030303;
+	border-left-color: #030303;
+}
+
+/*****************************************************
+10.  CONTENT LAYOUT VARIATIONS
+******************************************************/
+.left-note-block {
+	float: left;
+	width: 400px;
+	background-image: url(../images/opacity-60-rep.png);
+	background-repeat: repeat;
+	padding: 20px;
+	border-radius: 8px;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+}
+.full-width-transparent {
+	height: 350px;
+	height: auto;
+	min-height: 350px;
+	background-image: url(../images/opacity-60-rep.png);
+	background-repeat: repeat;
+	padding: 20px;
+    border-radius: 8px;
+    border-top-left-radius: 8px;
+    -moz-border-radius-topleft: 8px;
+    -webkit-border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    -moz-border-radius-topright: 8px;
+    -webkit-border-top-right-radius: 8px;
+}
+
+.transparent-header {
+    background-image: url(../images/opacity-60-rep.png);
+    background-repeat: repeat;
+    padding: 20px;
+    height: 55px;
+    border-top-left-radius: 8px;
+    -moz-border-radius-topleft: 8px;
+    -webkit-border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    -moz-border-radius-topright: 8px;
+    -webkit-border-top-right-radius: 8px;
+}
+
+.black-trasparent-header {
+    background-image: url(../images/content-header-bg.png);
+    background-repeat: repeat-x;
+    background-position: left top;
+    padding: 20px;
+    height: 55px;
+	border-top-left-radius: 8px;
+    -moz-border-radius-topleft: 8px;
+    -webkit-border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    -moz-border-radius-topright: 8px;
+    -webkit-border-top-right-radius: 8px;
+}
+
+.plain-black {
+    background: #0d0d0c;
+    padding: 20px;
+	-webkit-box-shadow: inset 0px 1px 3px #080707;
+	-moz-box-shadow: inset 0px 1px 3px #080707;
+	box-shadow: inset 0px 1px 3px #080707;
+}
+
+.left-col {
+	float: left;
+	width: 622px;
+	background-image: url(../images/line-break-vert.png);
+	background-repeat: repeat-y;
+	background-position: right top;
+	padding-right: 20px;
+}
+
+.right-col {
+	float: right;
+	width: 240px;
+	padding-left: 20px;
+	background-image: url(../images/line-break-vert.png);
+	background-repeat: repeat-y;
+	background-position: left top;
+	margin-left: -2px;
+}
 </style>
 <html lang="en">
 <head>
@@ -100,5 +216,44 @@ table.storm-table tr{
             <td>ggggggggg</td>
         </tr>
     </table>
+
+    <h3 id="sidebar">I M Suparat</h3>
+
+    <div class="plain-black clearfix">
+        <div class="portfolio colorbox-portfolio twocol-portfolio twocol-colorbox-portfolio clearfix">
+            <ul>
+                <li class="one-portfolio-item">
+                    <a class="portfolio-thumb-link cboxElement" href="images/portfolio/popup/sunrise.jpg" rel="portfolio">
+                        <img src="images/portfolio/2column/sunrise.jpg" alt="">
+                    <div class="portfolio-hover" style="opacity: 0; display: block;"></div></a>
+                </li>
+                <li class="one-portfolio-item">
+                    <a class="portfolio-thumb-link cboxElement" href="images/portfolio/popup/ocean.jpg" rel="portfolio">
+                        <img src="/All_Code_patten//image/ocean.jpg" alt="">
+                    <div class="portfolio-hover" style="opacity: 0; display: block;"></div></a>
+                </li>
+                <li class="one-portfolio-item">
+                    <a class="portfolio-thumb-link cboxElement" href="images/portfolio/popup/water.jpg" rel="portfolio">
+                        <img src="images/portfolio/2column/water.jpg" alt="">
+                    <div class="portfolio-hover" style="opacity: 0; display: block;"></div></a>
+                </li>
+                <li class="one-portfolio-item">
+                    <a class="portfolio-thumb-link cboxElement" href="images/portfolio/popup/sand.jpg" rel="portfolio">
+                        <img src="images/portfolio/2column/sand.jpg" alt="">
+                    <div class="portfolio-hover" style="opacity: 0; display: block;"></div></a>
+                </li>
+                <li class="one-portfolio-item">
+                    <a class="portfolio-thumb-link cboxElement" href="images/portfolio/popup/nebula.jpg" rel="portfolio">
+                        <img src="images/portfolio/2column/nebula.jpg" alt="">
+                    <div class="portfolio-hover" style="opacity: 0; display: block;"></div></a>
+                </li>
+                <li class="one-portfolio-item">
+                    <a class="portfolio-thumb-link cboxElement" href="images/portfolio/popup/waterfall.jpg" rel="portfolio">
+                        <img src="images/portfolio/2column/waterfall.jpg" alt="">
+                    <div class="portfolio-hover" style="opacity: 0; display: block;"></div></a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
