--- a/html/graph.html
+++ b/html/graph.html
@@ -36,3 +36,23 @@ SB Graph -->
         </div>
     </div>
 </div>
+
+<!-- Graph Donut -->
+
+
+<div class="card-body">
+    <div class="chart-pie pt-4 pb-2"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+        <canvas id="myPieChart" width="301" height="245" class="chartjs-render-monitor" style="display: block; width: 301px; height: 245px;"></canvas>
+    </div>
+    <div class="mt-4 text-center small">
+        <span class="mr-2">
+            <i class="fas fa-circle text-primary"></i> Direct
+        </span>
+        <span class="mr-2">
+            <i class="fas fa-circle text-success"></i> Social
+        </span>
+        <span class="mr-2">
+            <i class="fas fa-circle text-info"></i> Referral
+        </span>
+    </div>
+</div>
